add bootstrap and new story form and ability to save

--- a/app/templates/components/small-story.hbs
+++ b/app/templates/components/small-story.hbs
@@ -1,6 +1,9 @@
+<div class="col-md-4">
 
-{{#link-to 'story' story.id}}<img src={{story.image}} alt={{story.title}}>
+
+{{#link-to 'story' story.id}}<img src={{story.image}} alt={{story.title}} class="small-story-image">
 <div class="small-story-author-title-section">
   <h3>{{story.title}}</h3>
   <h3>By {{story.author}}</h3>
 </div>{{/link-to}}
+</div>
